# ML_Trend_Researcher

./: .gitignore  README.md  interests.yaml  pyproject.toml
.github/workflows/: sync-website.yml  weekly.yml
papers/: INDEX.md
papers/2026/: 2604.21725-ael-agent-evolving-learning-for-open-ended-environments.md  2604.23072-analytica-soft-propositional-reasoning-for-robust-and-scalab.md  2604.26805-bian-que-an-agentic-framework-with-flexible-skill-arrangemen.md  2605.06320-improving-the-efficiency-of-language-agent-teams-with-adapti.md  2606.06036-memory-is-reconstructed-not-retrieved-graph-memory-for-llm-a.md  2606.10875-pushing-the-limits-of-llm-tool-calling-via-experiential-know.md  2606.12674-evoflux-inference-time-evolution-of-executable-tool-workflow.md  2606.22902-agent-as-a-router-agentic-model-routing-for-coding-tasks.md  2606.27009-semantic-early-stopping-for-iterative-llm-agent-loops.md  2607.04542-auto-the-agi-compiler.md  2607.11126-toolatlas-learning-once-reusing-everywhere-with-tool-side-me.md
scripts/: export_website_digest.py
src/ai_research_agent/: arxiv_client.py  budget.py  main.py  models.py  notifier.py  pdf_parser.py  prefilter.py  ranker.py  repo_resolver.py  synthesizer.py
tests/: test_arxiv_client.py  test_budget.py  test_export_website_digest.py  test_main.py  test_models.py  test_notifier.py  test_pdf_parser.py  test_prefilter.py  test_ranker.py  test_repo_resolver.py  test_synthesizer.py  test_template.py  test_trend_report.py  test_trend_sources.py
trends/: 2026-07-04.md  2026-07-05.md  2026-07-12.md  2026-07-19.md  INDEX.md
(+20 files in other folders)
