[project]
name = "ai-research-agent"
version = "0.1.0"
description = "Weekly arXiv digest -> implementation-plan markdown"
requires-python = ">=3.12"
dependencies = [
  "anthropic>=0.40",
  "openai>=1.50",
  "httpx>=0.27",
  "pdfplumber>=0.11",
  "tiktoken>=0.8",
  "jinja2>=3.1",
  "pyyaml>=6.0",
  "tenacity>=9.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-httpx>=0.30",
  "respx>=0.22",
  "pyfakefs>=5.7",
  "ruff>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_research_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py312"
